--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
     "ngx-mask": "^8.0.6",
-    "rxjs": "~6.4.0",
+    "npm": "^6.12.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
